--- a/HMS_API/appsettings.json
+++ b/HMS_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HMS": "Server=MSI\\SQLSERVER;Database=NWU_HMS_DB_testing;TrustServerCertificate=True;Trusted_Connection=True;"
+  }
 }
