--- a/HMS_API/appsettings.json
+++ b/HMS_API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HMS": "Server=MSI\\SQLSERVER;Database=NWU_HMS_DB_testing;TrustServerCertificate=True;Trusted_Connection=True;"
+    "HMS": "Server=MSI\\SQLSERVER;Database=HMS_DB;TrustServerCertificate=True;Trusted_Connection=True;"
   }
 }
