Added More Integration Tests

--- a/HMS_API/appsettings.json
+++ b/HMS_API/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "0.0.0.0",
   "ConnectionStrings": {
-    "HMS": "Server=MSI\\SQLSERVER;Database=HMS_DB;TrustServerCertificate=True;Trusted_Connection=True;"
+    "HMS": "Server=DESKTOP-2999I1K;Database=HMS_DB;TrustServerCertificate=True;Trusted_Connection=True;"
   }
 }
